<resources>

    <string name="app_name">¿Dónde meo?</string>

    <!-- Login -->
    <string name="login__screen_title">Inicio de sesión</string>
    <string name="login__user">Usuario</string>
    <string name="login__password">Contraseña</string>
    <string name="login__btn__log_in">Iniciar sesión</string>
    <string name="login__btn__sign_up">Registrarse</string>
    <string name="login__menu_item__unexplored">Sin orinar</string>
    <string name="login__menu_item__reviewed">Orinados</string>
    <string name="login__menu_item__history">Historial</string>

    <!--  Main -->
    <string name="permissions__screen_title">¿Dónde quieres orinar?</string>
    <string name="permissions__location_rationale_message">El permiso de acceso a la localización solo es utilizado para centrar el mapa en su ubicación actual. ¿Seguro que desea no concederlo?</string>
    <string name="permissions__permission_denied">Permiso rechazado</string>
    <string name="permissions__im_sure">Estoy seguro</string>
    <string name="permissions__change">Cambiar</string>

    <!--  New Pee Point -->
    <string name="new_pee_point__screen_title">¿Cómo se orina aquí?</string>
    <string name="new_pee_point__add_a_picture">Añade una foto</string>
    <string name="new_pee_point__change_picture">Cambiar la foto</string>
    <string name="new_pee_point__cleanness">Limpieza</string>
    <string name="new_pee_point__soap">Jabón</string>
    <string name="new_pee_point__basin">Lavabo</string>
    <string name="new_pee_point__paper">Papel</string>
    <string name="new_pee_point__cologne">Colonia</string>
    <string name="new_pee_point__disabled_adapted">Adaptado para movilidad reducida</string>
    <string name="new_pee_point__need_be_customer">¿Hay que consumir?</string>
    <string name="new_pee_point__there_is">Hay</string>
    <string name="new_pee_point__there_isnt">No hay</string>
    <string name="new_pee_point__didnt_check">No me he fijado</string>
    <string name="new_pee_point__yes">Sí</string>
    <string name="new_pee_point__no">No</string>
    <string name="new_pee_point__comments">Comentarios</string>
    <string name="new_pee_point__comments_hint">Algo que quieras destacar del baño…</string>
    <string name="new_pee_point__done">Listo</string>
    <string name="title_activity_maps">Map</string>

</resources>
