<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login__menu_item__show_unexplored"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/login__menu_item__unexplored"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/login__menu_item__reviewed"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/login__menu_item__reviewed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/login__menu_item__history"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/login__menu_item__history"
        app:showAsAction="ifRoom" />

</menu>