<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.NewPeePointActivity">

    <es.mabao.melerospaw.dondemeo.widgets.VerticalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:scrollbarThumbVertical="@drawable/scrollbars"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/new_pee_point__container__add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/new_pee_point__btn__add_image"
                        android:layout_width="200dp"
                        android:layout_height="140dp"
                        app:srcCompat="@drawable/photo_frame" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:text="@string/new_pee_point__add_a_picture" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/new_pee_point__container__photo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/new_pee_point__img__photo"
                        android:layout_width="200dp"
                        android:layout_height="140dp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom|center_horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparentPrimaryLight"
                            android:gravity="center"
                            android:text="@string/new_pee_point__change_picture" />

                    </FrameLayout>

                </FrameLayout>

            </FrameLayout>


            <!-- Cleanness -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__cleanness" />

            <RatingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <es.mabao.melerospaw.dondemeo.widgets.MultipleChoiceView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <es.mabao.melerospaw.dondemeo.widgets.OptionView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/new_pee_point__there_is" />

                <es.mabao.melerospaw.dondemeo.widgets.OptionView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/new_pee_point__there_isnt" />

                <es.mabao.melerospaw.dondemeo.widgets.OptionView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/new_pee_point__didnt_check" />

            </es.mabao.melerospaw.dondemeo.widgets.MultipleChoiceView>

            <!-- Soap -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__soap" />

            <FrameLayout
                android:id="@+id/new_pee_point__container__soap_selector"
                android:layout_width="match_parent"
                style="@style/NewPeePointItemContent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/new_pee_point__selected_soap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:id="@+id/new_pee_point__container__soap_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/new_pee_point__label__there_is_soap"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/new_pee_point__item_padding"
                        android:paddingBottom="@dimen/new_pee_point__item_padding"
                        android:gravity="center_horizontal"
                        android:text="@string/new_pee_point__there_is" />

                    <TextView
                        android:id="@+id/new_pee_point__label__there_isnt_soap"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/new_pee_point__item_padding"
                        android:paddingBottom="@dimen/new_pee_point__item_padding"
                        android:gravity="center_horizontal"
                        android:text="@string/new_pee_point__there_isnt" />

                    <TextView
                        android:id="@+id/new_pee_point__label__havent_checked_soap"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/new_pee_point__item_padding"
                        android:paddingBottom="@dimen/new_pee_point__item_padding"
                        android:gravity="center_horizontal"
                        android:text="@string/new_pee_point__didnt_check" />

                </LinearLayout>

            </FrameLayout>

            <!-- Basin -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__basin" />

            <LinearLayout
                style="@style/NewPeePointItemContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__there_is" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__there_isnt" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__didnt_check" />

            </LinearLayout>


            <!-- Paper -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__paper" />

            <LinearLayout
                style="@style/NewPeePointItemContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__there_is" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__there_isnt" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__didnt_check" />

            </LinearLayout>


            <!-- Cologne -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__cologne" />

            <LinearLayout
                style="@style/NewPeePointItemContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__there_is" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__there_isnt" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__didnt_check" />

            </LinearLayout>


            <!-- Disabled-adapted -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__disabled_adapted" />

            <LinearLayout
                style="@style/NewPeePointItemContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__yes" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__no" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__didnt_check" />

            </LinearLayout>


            <!-- Customer compulsory -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__need_be_customer" />

            <LinearLayout
                style="@style/NewPeePointItemContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__yes" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/new_pee_point__no" />

            </LinearLayout>


            <!-- Comment -->
            <TextView
                style="@style/NewPeePointItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_pee_point__comments" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/new_pee_point__input__comments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/new_pee_point__comments_hint"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:scrollbarThumbVertical="@drawable/scrollbars"
                    android:scrollbars="vertical" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/new_pee_point__btn__done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_pee_point__done" />

        </LinearLayout>

    </es.mabao.melerospaw.dondemeo.widgets.VerticalScrollView>

    <FrameLayout
        android:id="@+id/new_pee_point__container__loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentPrimaryLight"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</FrameLayout>